syntax = "proto3";
package sign_up_idl;

// import "google/protobuf/timestamp.proto";

option go_package="./proto_gen/sign_up;sign_up_service";

message User {
  int32 Id = 1;
  string Account = 2;
  string NickName = 3;
  string Pwd = 4;
  string Email = 5;
  string Phone = 6;
  string PicUrl = 7;
  // google.protobuf.Timestamp BirthDay = 8;
  // google.protobuf.Timestamp CreateTime = 9;
  int64 BirthDay = 8;
  int64 CreateTime = 9;
  int32 Status = 10;
  // google.protobuf.Timestamp LastLoginTime = 11;
  int64 LastLoginTime = 11;
}

message MsgRsp { // 响应码
  string msg = 1;
}
message EmailReq { // 邮箱请求验证码
  string email = 1;
}
message CheckEmailReq { // 邮箱验证
  string email = 1;
  string vaildCode = 2;
}
message LoginReq { // 用户登陆请求
  string loginName = 1;
  string pwd = 2;
}
message TokenRsp { // 用户的Access Token和Refresh Token
  string Atoken = 1;
  string Rtoken = 2;
  string msg = 3;
}

service SignUpService {
  // 添加用户
  rpc AddUser(User) returns (MsgRsp) {}
  // 申请验证码（提供用户邮箱），保存redis三分钟
  rpc RequestValid(EmailReq) returns (MsgRsp) {}
  // 验证邮箱验证码
  rpc CheckValidCode(CheckEmailReq) returns (MsgRsp) {}
  // 用户登陆验证
  rpc Login(LoginReq) returns (TokenRsp) {}
}
